Added part of tablet

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </ul>
     </nav>
     <div class='header__contacts'>
-      <span class='main-text-1'>
+      <span class='phone main-text-1 main-text-1_tablet'>
         +7 (812) 241 12 73
       </span>
       <a class='contacts-tg' href="">
@@ -43,22 +43,29 @@
       <a href="">
         <img src="./assets/icons/whatsapp-icon.svg" alt="whatsapp">
       </a>
+      <div class="header__menu">
+        <svg width="28" height="25" viewBox="0 0 28 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <rect width="28" height="2" fill="#66D1FC"/>
+          <rect y="12" width="28" height="2" fill="#66D1FC"/>
+          <rect y="23" width="28" height="2" fill="#66D1FC"/>
+        </svg>   
+      </div>
     </div>
   </header>
 
   <!-- BANER -->
   <section class="main-baner">
     <div class="main-baner__info">
-      <span class="main-baner__title">
+      <span class="main-baner__title header-1_tablet header-2_mobile">
         Система бронирования 
-        <span class="font_pips">рабочих </span>
+        <span class="font_pips header-2_tablet header-2_mobile">рабочих </span>
         мест. 
       </span>
-      <span class="main-baner__description main-text-1">
+      <span class="main-baner__description main-text-1 main-text-1_tablet main-text-1_mobile">
         Cистема управления офисным пространством для компаний, которые ценят своих сотрудников
       </span>
       <button class="main-baner__button">
-        <span class='main-text-1'>Попробовать</span>
+        <span class='main-text-1 main-text-1_tablet main-text-1_mobile'>Попробовать</span>
       </button>
     </div>
   </section>
@@ -75,12 +82,12 @@
   <!-- MOBILE APP -->
   <section class="mobile-app feature">
     <div class="title">
-      <span class="main-text-1">
+      <span class="main-text-1 main-text-1_tablet">
         Мобильное приложение 
       </span>
     </div>
-    <h1 class="advantages">
-      Ты сам выбираешь <span class="font_pips">где</span>, <span class="font_pips">когда</span>  и <span class="font_pips">с кем</span> работать. 
+    <h1 class="advantages header-3_tablet">
+      Ты сам выбираешь <span class="font_pips header-4_tablet">где</span>, <span class="font_pips header-4_tablet">когда</span>  и <span class="font_pips header-4_tablet">с кем</span> работать. 
     </h1>
     <div class="mobile-app-swiper__wrapper">
       <div class="swiper-container mobile-app-swiper">
@@ -89,21 +96,21 @@
             <div class="mobile-app__slider-card">
               <img class='mobile-img' src="./assets/images/mobile_1.png" alt="">
               <div class="card-info">
-                <div class="card-title main-text-3">
+                <div class="card-title main-text-3 header-5_tablet">
                   Бронируй рабочие места <br> и переговорные комнаты 
                 </div>
                 <div class="card-description">
                   <div class="card-description__item">
                     <img src="./assets/icons/work-place.svg" alt="">
-                    <span class="title main-text-4">команда</span>
+                    <span class="title main-text-4 additional-text-1_tablet">команда</span>
                   </div>
                   <div class="card-description__item">
                     <img src="./assets/icons/time.svg" alt="">
-                    <span class="title main-text-4">время</span>
+                    <span class="title main-text-4 additional-text-1_tablet">время</span>
                   </div>
                   <div class="card-description__item">
                     <img src="./assets/icons/meeting.svg" alt="">
-                    <span class="title main-text-4">совещание</span>
+                    <span class="title main-text-4 additional-text-1_tablet">совещание</span>
                   </div>
                 </div>
               </div>
@@ -113,21 +120,21 @@
             <div class="mobile-app__slider-card">
               <img class='mobile-img' src="./assets/images/mobile_2.png" alt="">
               <div class="card-info">
-                <div class="card-title main-text-3">
+                <div class="card-title main-text-3 header-5_tablet">
                   Работай вместе с командой
                 </div>
                 <div class="card-description">
                   <div class="card-description__item">
                     <img src="./assets/icons/comand.svg" alt="">
-                    <span class="title main-text-4">команда</span>
+                    <span class="title main-text-4 additional-text-1_tablet">команда</span>
                   </div>
                   <div class="card-description__item">
                     <img src="./assets/icons/ofice.svg" alt="">
-                    <span class="title main-text-4">офис</span>
+                    <span class="title main-text-4 additional-text-1_tablet">офис</span>
                   </div>
                   <div class="card-description__item">
                     <img src="./assets/icons/notification.svg" alt="">
-                    <span class="title main-text-4">уведомления</span>
+                    <span class="title main-text-4 additional-text-1_tablet">уведомления</span>
                   </div>
                 </div>
               </div>
@@ -137,21 +144,21 @@
             <div class="mobile-app__slider-card">
               <img class='mobile-img' src="./assets/images/mobile_3.png" alt="">
               <div class="card-info">
-                <div class="card-title main-text-3">
+                <div class="card-title main-text-3 header-5_tablet">
                   Выбирай точки интереса <br>на карте
                 </div>
                 <div class="card-description">
                   <div class="card-description__item">
                     <img src="./assets/icons/kitchen.svg" alt="">
-                    <span class="title main-text-4">кухня</span>
+                    <span class="title main-text-4 additional-text-1_tablet">кухня</span>
                   </div>
                   <div class="card-description__item">
                     <img src="./assets/icons/information.svg" alt="">
-                    <span class="title main-text-4">информация</span>
+                    <span class="title main-text-4 additional-text-1_tablet">информация</span>
                   </div>
                   <div class="card-description__item">
                     <img src="./assets/icons/sport.svg" alt="">
-                    <span class="title main-text-4">фитнес</span>
+                    <span class="title main-text-4 additional-text-1_tablet">фитнес</span>
                   </div>
                 </div>
               </div>
@@ -168,41 +175,41 @@
   <!-- ADMIN PANEL -->
   <section class="admin-panel feature">
     <div class="title">
-      <span class="main-text-1">
+      <span class="main-text-1 main-text-1_tablet">
         Адиминка
       </span>
     </div>
-    <h1 class="advantages">
-      <span class="font_pips">Легкая</span> и <span class="font_pips">гибкая</span> настройка пространства для эффективной работы
+    <h1 class="advantages header-3_tablet">
+      <span class="font_pips header-4_tablet">Легкая</span> и <span class="font_pips header-4_tablet">гибкая</span> настройка пространства для эффективной работы
     </h1>
     <div class="swiper-container admin-panel-swiper">
       <div class="swiper-wrapper">
 
         <div class="swiper-slide admin-panel__card">
-          <span class="admin-panel__title main-text-3">
+          <span class="admin-panel__title main-text-3 header-5_tablet">
             Управляй <span class="font-color_blue">картой офиса:</span> <br> интерактивная карта для поиска мест
           </span>
-          <span class="admin-panel__description main-text-1">
+          <span class="admin-panel__description main-text-1 main-text-1_tablet">
             расстановка интерактивных маркеров <br> и точек интереса на карте
           </span>
           <img src="./assets/images/admin-panel.png" alt="">
         </div>
 
         <div class="swiper-slide admin-panel__card">
-          <span class="admin-panel__title main-text-3">
+          <span class="admin-panel__title main-text-3 header-5_tablet">
             Отправляй корпоративные <br> <span class="font-color_blue">уведомления</span>
           </span>
-          <span class="admin-panel__description main-text-1">
+          <span class="admin-panel__description main-text-1 main-text-1_tablet">
             Групповая и персональная рассылка уведомлений,<br> сообщений и новостей сотрудникам 
           </span>
           <img src="./assets/images/admin-panel-analytics.png" alt="">
         </div>
 
         <div class="swiper-slide admin-panel__card">
-          <span class="admin-panel__title main-text-3">
+          <span class="admin-panel__title main-text-3 header-5_tablet">
             <span class="font-color_blue">Анализируй</span> эффективность<br> использования офисного пространства 
           </span>
-          <span class="admin-panel__description main-text-1">
+          <span class="admin-panel__description main-text-1 main-text-1_tablet">
             Посещаемость сотрудниками рабочих мест, cредний процент<br> утилизации, количество мест доступных для бронирования. 
           </span>
           <img src="./assets/images/admin-panel-notification.png" alt="">
@@ -217,29 +224,29 @@
   <!-- BOOKING PANEL -->
   <section class="booking-panel feature">
     <div class="title">
-      <span class="main-text-1">
+      <span class="main-text-1 main-text-1_tablet ">
         Панель бронирования
       </span>
     </div>
-    <h1 class="advantages">
+    <h1 class="advantages header-3_tablet">
       Наглядная <br><span class="font_pips">информация</span> о статусе <br> переговорной комнаты
     </h1>
     <div class="booking-panel__opportunity">
       <div class="opportunity-item">
         <img src="./assets/icons/checkbox-icon.svg" alt="">
-        <span class="main-text-1">
+        <span class="main-text-1 additional-text-1_tablet">
           Забронировать
         </span>
       </div>
       <div class="opportunity-item">
         <img src="./assets/icons/checkbox-icon.svg" alt="">
-        <span class="main-text-1">
+        <span class="main-text-1 additional-text-1_tablet">
           Узнать кем занята  
         </span>
       </div>
       <div class="opportunity-item">
         <img src="./assets/icons/checkbox-icon.svg" alt="">
-        <span class="main-text-1">
+        <span class="main-text-1 additional-text-1_tablet">
           График занятости 
         </span>
       </div>
@@ -254,30 +261,30 @@
   
   <section class="how-it-work block_100vw">
     <div class="how-it-work__wrapper">
-      <h1>
+      <h1 class="header-3_tablet">
         Как это работает?
       </h1>
       <div class="how-it-work__instruction">
         <div class="instruction__item">
-          <h3>01. Внедряй</h3>
-          <span class="main-text-2">Легкое внедрение и интуитивно понятный интерфейс на страже ваших нервов и бюджетов.</span>
-          <span class="main-text-1">Ни один сотрудник бухгалтерии не пострадал во время UX тестирования</span>
+          <h3 class="header-5_tablet">01. Внедряй</h3>
+          <span class="main-text-2 main-text-2_tablet">Легкое внедрение и интуитивно понятный интерфейс на страже ваших нервов и бюджетов.</span>
+          <span class="main-text-1 additional-text-1_tablet">Ни один сотрудник бухгалтерии не пострадал во время UX тестирования</span>
         </div>
         <img src="./assets/images/implement.png" alt="">
       </div>
       <div class="how-it-work__instruction">
         <div class="instruction__item">
-          <h3>02. Анализируй</h3>
-          <span class="main-text-2">Актуальная информация об использовании рабочих мест, пространств, графиков работы и расположении сотрудников в офисе.</span>
-          <span class="main-text-1">В любой момент времени вы владеете актуальной информацией и контролируете ситуацию</span>
+          <h3 class="header-5_tablet">02. Анализируй</h3>
+          <span class="main-text-2 main-text-2_tablet">Актуальная информация об использовании рабочих мест, пространств, графиков работы и расположении сотрудников в офисе.</span>
+          <span class="main-text-1 additional-text-1_tablet">В любой момент времени вы владеете актуальной информацией и контролируете ситуацию</span>
         </div>
         <img src="./assets/images/analyze.png" alt="">
       </div>
       <div class="how-it-work__instruction">
         <div class="instruction__item">
-          <h3>03. Управляй</h3>
-          <span class="main-text-2">Управляй использованием рабочих мест, переговорных комнат и других помещений.</span>
-          <span class="main-text-1">Теперь можно организовать работу сотрудников с гибким графиком, инициировать коллективную работу и не занимать очередь в переговорную</span>
+          <h3 class="header-5_tablet">03. Управляй</h3>
+          <span class="main-text-2 main-text-2_tablet">Управляй использованием рабочих мест, переговорных комнат и других помещений.</span>
+          <span class="main-text-1 additional-text-1_tablet">Теперь можно организовать работу сотрудников с гибким графиком, инициировать коллективную работу и не занимать очередь в переговорную</span>
         </div>
         <img src="./assets/images/control.png" alt="">
       </div>
@@ -289,30 +296,30 @@
 
   <section class="system-options feature">
     <div class="title">
-      <span class="main-text-1">
+      <span class="main-text-1 main-text-1_tablet">
         Варианты системы
       </span>
     </div>
     <div class="system-options__wrapper">
       <div class="system-options__item">
-        <span class="h7">
+        <span class="h7 header-3_tablet">
           SAAS
         </span>
-        <span class="main-text-3">
+        <span class="main-text-3 header-6_tablet">
           Легкий облачный сервис
         </span>
-        <span class="main-text-1">
+        <span class="main-text-1 main-text-1_tablet">
           Зарегистрируйся и скачай <br> приложение SIMPLE OFFICE
         </span>
       </div>
       <div class="system-options__item">
-        <span class="h7">
+        <span class="h7 header-3_tablet">
           ON-PREMISE
         </span>
-        <span class="main-text-3">
+        <span class="main-text-3 header-6_tablet">
           Персональная коробочная версия
         </span>
-        <span class="main-text-1">
+        <span class="main-text-1 main-text-1_tablet">
           Система устанавливается на<br> корпоративном сервере 
         </span>
       </div>
@@ -324,10 +331,10 @@
   <section class="free-app">
     <div class="free-app__offer-info">
       <div class="free-app__offer-info-wrapper">
-        <span class="main-text-1">
+        <span class="main-text-1 main-text-1_tablet">
           30 дней бесплатно
         </span>
-        <h2>Хочешь протестировать сиcтему?</h2>
+        <h2 class="header-5_tablet">Хочешь протестировать сиcтему?</h2>
       </div>
     </div>
     <div class="free-app__form">
@@ -345,7 +352,7 @@
           placeholder="E-mail"
         >
         <button>
-          <span class="main-text-1">Отправить заявку</span>
+          <span class="main-text-1 main-text-1_tablet">Отправить заявку</span>
         </button>
       </form>
     </div>
@@ -355,30 +362,30 @@
   
   <section class="advantages feature">
     <div class="title">
-      <span class="main-text-1">
+      <span class="main-text-1 main-text-1_tablet">
         Преимущества
       </span>
     </div>
-    <h1>Почему SIMPLE OFFICE?</h1>
+    <h1 class="header-3_tablet">Почему SIMPLE OFFICE?</h1>
     <div class="advantages__wrapper-items">
       <div class="advantages__item"> 
         <img src="./assets/images/simply.png" alt="">
-        <h4>просто</h4>
-        <span class="main-text-1">
+        <h4 class="header-5_tablet">просто</h4>
+        <span class="main-text-1 main-text-1_tablet">
           Мы разработали такую систему, которая позволяет максимально лаконично вписаться в любые бизнеc-процеcсы компании. 
         </span>
       </div>
       <div class="advantages__item">
         <img class="conveniently-img" src="./assets/images/conveniently.png" alt="">
-        <h4>удобно</h4>
-        <span class="main-text-1">
+        <h4 class="header-5_tablet">удобно</h4>
+        <span class="main-text-1 main-text-1_tablet">
           UX-friendly мобильное приложение. Мы провели десятки часов UX-тестирования на различных фокус-группах. 
         </span>
       </div>
       <div class="advantages__item">
         <img src="./assets/images/profitable.png" alt="">
-        <h4>выгодно</h4>
-        <span class="main-text-1">
+        <h4 class="header-5_tablet">выгодно</h4>
+        <span class="main-text-1 main-text-1_tablet">
           Позволяет экономить на аренде помещений за счет более эффективного использования офисного пространства. 
         </span>
       </div>
